--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       <div class="card">
         <div class="card-header">
           <h2>Generate a Password</h2>
+          <div class="slide-container">
+            <p>
+              Password Length: 
+              <span id="passwordLength"></span>
+            </p>
+            <input type="range" min="8" max="128" value="8" class="slider" id="characterRange">
+          </div>
         </div>
         <div class="card-body">
           <textarea
@@ -29,6 +36,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="newScript.js"></script>
   </body>
 </html>
