Replaced arrays with pure strings to create passwords; still working on regex integration

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
             </p>
             <input type="range" min="8" max="128" value="8" class="slider" id="characterRange">
             <ul>
-              <input type="checkbox" id="lowercase" name="lowercase" value="Lowercase">
+              <input type="checkbox" id="lowercase" name="characters" value="Lowercase">
               <label for="lowercase"> 
                 Include lowercase letters
               </label>
               <br/><br/>
-              <input type="checkbox" id="uppercase" name="uppercase" value="Uppercase">
+              <input type="checkbox" id="uppercase" name="characters" value="Uppercase">
               <label for="uppercase"> 
                 Include uppercase letters
               </label>
               <br/><br/>
-              <input type="checkbox" id="numbers" name="numbers" value="Numbers">
+              <input type="checkbox" id="numbers" name="characters" value="Numbers">
               <label for="numbers"> 
                 Include numbers
               </label>
               <br/><br/>
-              <input type="checkbox" id="specialCharacters" name="specialCharacters" value="SpecialCharacters">
+              <input type="checkbox" id="specialCharacters" name="characters" value="SpecialCharacters">
               <label for="specialCharacters"> 
                 Include special characters
               </label>
