--- a/index.html
+++ b/index.html
@@ -24,22 +24,27 @@
             </p>
             <input type="range" min="8" max="128" value="8" class="slider" id="characterRange">
             <ul>
-              <input type="checkbox" id="lowercase" name="characters" value="Lowercase">
+              <input type="checkbox" id="allCharacters" onclick="toggleCheckboxes(this)">
+              <label for="allCharacters"> 
+                <b>Include all character types</b>
+              </label>
+              <br/><br/>
+              <input type="checkbox" id="lowercase" class="characters">
               <label for="lowercase"> 
                 Include lowercase letters
               </label>
               <br/><br/>
-              <input type="checkbox" id="uppercase" name="characters" value="Uppercase">
+              <input type="checkbox" id="uppercase" class="characters">
               <label for="uppercase"> 
                 Include uppercase letters
               </label>
               <br/><br/>
-              <input type="checkbox" id="numbers" name="characters" value="Numbers">
+              <input type="checkbox" id="numbers" class="characters">
               <label for="numbers"> 
                 Include numbers
               </label>
               <br/><br/>
-              <input type="checkbox" id="specialCharacters" name="characters" value="SpecialCharacters">
+              <input type="checkbox" id="specialCharacters" class="characters">
               <label for="specialCharacters"> 
                 Include special characters
               </label>
@@ -55,7 +60,15 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="generate" class="btn">
+            Generate Password
+          </button>
+          <button id="copy" class="btn">
+            Copy Password
+          </button>
+          <p id='copyNotify' hidden>
+            Password copied!
+          </p>
         </div>
       </div>
     </div>
